--- a/src/External/Infrastructure/Infrastructure.csproj
+++ b/src/External/Infrastructure/Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\Base\" />
+    <Folder Include="Dtos\" />
   </ItemGroup>
 
 </Project>
