--- a/src/External/Infrastructure/Infrastructure.csproj
+++ b/src/External/Infrastructure/Infrastructure.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
+    <Folder Include="Mappers\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
