added interfaces to Application, created first version of db enviromrnt

--- a/src/Bank_System/Bank_System.csproj
+++ b/src/Bank_System/Bank_System.csproj
@@ -62,4 +62,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Core\Application\Application.csproj" />
+	  <ProjectReference Include="..\Core\Domain\Domain.csproj" />
+	  <ProjectReference Include="..\External\Infrastructure\Infrastructure.csproj" />
+	</ItemGroup>
+
 </Project>
