--- a/src/BankSystem/BankSystem.csproj
+++ b/src/BankSystem/BankSystem.csproj
@@ -14,17 +14,17 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
-		<RootNamespace>Bank_System</RootNamespace>
+		<RootNamespace>BankSystem</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>Bank_System</ApplicationTitle>
+		<ApplicationTitle>BankSystem</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.bank_system</ApplicationId>
+		<ApplicationId>com.companyname.banksystem</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -63,9 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Core\Application\Application.csproj" />
 	  <ProjectReference Include="..\Core\Domain\Domain.csproj" />
 	  <ProjectReference Include="..\External\Infrastructure\Infrastructure.csproj" />
+	  <ProjectReference Include="..\External\Presentation\Presentation.csproj" />
 	</ItemGroup>
 
 </Project>
