--- a/src/Core/Domain/Domain.csproj
+++ b/src/Core/Domain/Domain.csproj
@@ -12,4 +12,10 @@
     <None Remove="Exceptions\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.83" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.10.196-beta" />
+  </ItemGroup>
+
 </Project>
