Bank Pages added, there is a problem in sqrolview

--- a/src/BankSystem/BankSystem.csproj
+++ b/src/BankSystem/BankSystem.csproj
@@ -70,6 +70,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\EditBanksPage.xaml.cs">
+	    <DependentUpon>EditBanksPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\AddBankPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\BankDetailsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\EditBanksPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
